--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark ">
-  <div class="container-fluid">
-    <div class="logo">
+  <div class="container px-5 py-2">
+    <div class="logo d-flex ">
         <a class="navbar-brand" href="#">
-<img src="./assets/facebook.png" width="100" alt="">
+<h4 class="heading4">facebook</h4>
 
     </a>
     </div>
@@ -42,7 +42,7 @@
         <h3 class="text-center mb-3">Login</h3>
         <input type="email" id="loginEmail" class="form-control mb-2" placeholder="Email">
         <input type="password" id="loginPass" class="form-control mb-3" placeholder="Password">
-        <button class="btn btn-primary w-100" id="loginBtn">Login</button>
+        <button class="btn w-100" id="loginBtn">Login</button>
         <p class="text-center mt-3 small">No account? <span class="text-primary pointer" id="showSignup">Signup</span></p>
       </div>
     </div>
@@ -63,8 +63,8 @@
 </div>
 
 <!-- MAIN FEED PAGE -->
-<div class="container mt-4 d-none usermain" id="mainPage">
-  <h4>Welcome, <span id="usernameText"></span> 
+<div class="container mt-4 d-none usermain py-4" id="mainPage">
+  <h4 > <span id="usernameText"></span> 
 <i class="fa-regular fa-user user"></i>
 </h4>
 
@@ -72,7 +72,7 @@
   <div class="card p-3 mt-3 shadow-sm">
     <textarea id="postText" class="form-control" placeholder="Write something..."></textarea>
     <input type="text" id="postImg" class="form-control mt-2" placeholder="Image URL (optional)">
-    <button class="btn btn-primary mt-3" id="postBtn">Post</button>
+    <button class="btn  mt-3" id="postBtn">Post</button>
   </div>
 
   <!-- Search + Sort -->
@@ -108,5 +108,6 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./app.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
